visualización tabla ratings

--- a/Preprocesamiento.ipynb
+++ b/Preprocesamiento.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNsVN/4jjQIwxRCichDP3SE",
+      "authorship_tag": "ABX9TyP3Y8EMVzZA6gmiRGH5E8lz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,21 +49,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V0o615IrEUoi",
-        "outputId": "9c3bc465-243d-4e2d-c23c-5e02f5630714"
+        "outputId": "a9dcd2f1-ea2c-4572-97a2-e3c3b1ab6917"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/1.6 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.1/1.6 MB\u001b[0m \u001b[31m1.8 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.4/1.6 MB\u001b[0m \u001b[31m5.5 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.8/1.6 MB\u001b[0m \u001b[31m7.4 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━\u001b[0m \u001b[32m1.2/1.6 MB\u001b[0m \u001b[31m8.6 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m9.4 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m8.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/1.6 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.1/1.6 MB\u001b[0m \u001b[31m3.5 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m22.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: sqlalchemy in /usr/local/lib/python3.10/dist-packages (2.0.29)\n",
             "Requirement already satisfied: typing-extensions>=4.6.0 in /usr/local/lib/python3.10/dist-packages (from sqlalchemy) (4.10.0)\n",
             "Requirement already satisfied: greenlet!=0.4.17 in /usr/local/lib/python3.10/dist-packages (from sqlalchemy) (3.0.3)\n",
             "Collecting mysql-connector-python\n",
             "  Downloading mysql_connector_python-8.3.0-cp310-cp310-manylinux_2_17_x86_64.whl (21.5 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.5/21.5 MB\u001b[0m \u001b[31m40.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.5/21.5 MB\u001b[0m \u001b[31m59.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: mysql-connector-python\n",
             "Successfully installed mysql-connector-python-8.3.0\n"
           ]
@@ -107,7 +107,7 @@
       ],
       "metadata": {
         "id": "H4RnSuqGghr5",
-        "outputId": "d57343c9-c079-4c69-c475-c332ddc99f10",
+        "outputId": "555bf119-e424-42d3-873d-77e2b1895a52",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -155,27 +155,10 @@
         "conn.close()"
       ],
       "metadata": {
-        "id": "vLPXhC7tnNxM",
-        "outputId": "8de44f16-93eb-4d8d-85da-8a959c0f8334",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 211
-        }
+        "id": "vLPXhC7tnNxM"
       },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "OperationalError",
-          "evalue": "duplicate column name: year",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-12-7bcb40bcf83b>\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Agregar una nueva columna para almacenar el año\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"ALTER TABLE movies ADD COLUMN year INTEGER\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# Actualizar la nueva columna con el año extraído del título de la película\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mOperationalError\u001b[0m: duplicate column name: year"
-          ]
-        }
-      ]
+      "execution_count": 8,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -197,12 +180,12 @@
       ],
       "metadata": {
         "id": "4ZNzfQt2oamk",
-        "outputId": "05e9249d-dd6d-4237-904f-35413cd0f0ff",
+        "outputId": "eed171df-dc0d-4b23-e742-0b52ad4dd041",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,7 +205,7 @@
         "# verificamos el contenido de las primeras filas de la tabla movies\n",
         "conn = sqlite3.connect('db_movies')\n",
         "\n",
-        "query = \"SELECT * FROM movies LIMIT 5\"  # Cambia el número de filas según tus necesidades\n",
+        "query = \"SELECT * FROM movies LIMIT 5\"\n",
         "\n",
         "# Ejecutar la consulta y cargar los resultados en un DataFrame de Pandas\n",
         "movies = pd.read_sql(query, conn)\n",
@@ -232,12 +215,12 @@
       ],
       "metadata": {
         "id": "XBMSMZKIpABZ",
-        "outputId": "a2e17b60-370c-422f-bd6d-603873cf3c87",
+        "outputId": "32aa2543-374c-4254-df70-8ec4a0ec1490",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,6 +239,43 @@
             "2                               Comedy|Romance  1995  \n",
             "3                         Comedy|Drama|Romance  1995  \n",
             "4                                       Comedy  1995  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# verificamos el contenido de las primeras filas de la tabla ratings\n",
+        "conn = sqlite3.connect('db_movies')\n",
+        "\n",
+        "query = \"SELECT * FROM ratings LIMIT 5\"\n",
+        "\n",
+        "# Ejecutar la consulta y cargar los resultados en un DataFrame de Pandas\n",
+        "ratings = pd.read_sql(query, conn)\n",
+        "\n",
+        "# Mostrar las primeras filas del DataFrame\n",
+        "print(ratings)"
+      ],
+      "metadata": {
+        "id": "qpGhDr2ZTrdh",
+        "outputId": "4694ebbc-4150-4593-9da5-be186eb80e09",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   userId  movieId  rating  timestamp\n",
+            "0       1        1     4.0  964982703\n",
+            "1       1        3     4.0  964981247\n",
+            "2       1        6     4.0  964982224\n",
+            "3       1       47     5.0  964983815\n",
+            "4       1       50     5.0  964982931\n"
           ]
         }
       ]
@@ -282,7 +302,7 @@
       "metadata": {
         "id": "8ZkUqUGXDK7R"
       },
-      "execution_count": 17,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -311,7 +331,7 @@
       "metadata": {
         "id": "vYY1g_MjFvN9"
       },
-      "execution_count": 18,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -338,7 +358,7 @@
       "metadata": {
         "id": "77ryWF1UGbX5"
       },
-      "execution_count": 24,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -370,18 +390,18 @@
       "metadata": {
         "id": "fEcmfPLfjKme"
       },
-      "execution_count": 26,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7GVBstjRCvnL",
-        "outputId": "57a89f9e-48b0-4688-ee8f-c41774c7c29c"
+        "outputId": "cc7be61e-e5ac-4078-a25d-f571ba0a32e2"
       },
       "outputs": [
         {
@@ -437,12 +457,12 @@
       ],
       "metadata": {
         "id": "FOLmlkADlb_c",
-        "outputId": "52476ef0-a9eb-4837-922e-1ccd80badde2",
+        "outputId": "9d998ae9-ea42-4d40-a6a4-e8bdeda6043c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -496,9 +516,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d-n-CdNLKRCY",
-        "outputId": "093f4f27-fd08-41ce-d324-0c5190e9f27c"
+        "outputId": "c54c7042-ab90-4e0c-a42b-f05ce902bb12"
       },
-      "execution_count": 29,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -532,9 +552,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ff9jWWq8KeAo",
-        "outputId": "8a45f7b4-33b8-4933-d7cf-bb524b344e85"
+        "outputId": "4da90e4a-289e-4f16-a026-fe2298cb38bb"
       },
-      "execution_count": 30,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
