--- a/c_modelos1.ipynb
+++ b/c_modelos1.ipynb
@@ -11492,7 +11492,7 @@
         "####ejemplo para una película\n",
         "movie_list_name = []\n",
         "movie_name='Spider-Man (2002)'\n",
-        "movie_id = movies[movies['title'] == movie_name].index ### extraer el indice del libro\n",
+        "movie_id = movies[movies['title'] == movie_name].index ### extraer el indice de la pelicula\n",
         "movie_id = movie_id[0] ## si encuentra varios solo guarde uno"
       ],
       "metadata": {
