--- a/c_modelos1.ipynb
+++ b/c_modelos1.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPzSe7n+oA74qeDPK7TcPEg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -10021,7 +10020,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 27,
       "metadata": {
         "id": "mH55J-iwpC7O"
       },
@@ -10059,9 +10058,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UHRtSxI-6Mvn",
-        "outputId": "17c00edf-ccc5-437d-9413-84540c72e639"
+        "outputId": "2b7bf750-ab4f-463e-9d72-f1fbf243744d"
       },
-      "execution_count": 2,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -10103,7 +10102,7 @@
         "pd.read_sql(\"\"\"\n",
         "SELECT movie_title,\n",
         "       avg(rating) as avg_rat,\n",
-        "       count(*) as read_num\n",
+        "       count(*) as w_num\n",
         "FROM full_ratings\n",
         "WHERE rating <> 0\n",
         "GROUP BY movie_title\n",
@@ -10117,29 +10116,29 @@
           "height": 363
         },
         "id": "SJOIT1be7ime",
-        "outputId": "f064bb3a-d752-47fa-8c03-b16a44d93804"
+        "outputId": "e3107d82-ce16-45e4-ff31-1973df6975f4"
       },
-      "execution_count": 3,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "                                         movie_title   avg_rat  read_num\n",
-              "0                   Shawshank Redemption, The (1994)  4.442922       219\n",
-              "1                              Godfather, The (1972)  4.290850       153\n",
-              "2                              Cool Hand Luke (1967)  4.290698        43\n",
-              "3                                   Chinatown (1974)  4.255102        49\n",
-              "4                                 Rear Window (1954)  4.253623        69\n",
-              "5                         Princess Bride, The (1987)  4.247863       117\n",
-              "6                            Schindler's List (1993)  4.246835       158\n",
-              "7                                  Goodfellas (1990)  4.245192       104\n",
-              "8  Dr. Strangelove or: How I Learned to Stop Worr...  4.243902        82\n",
-              "9                          American History X (1998)  4.237113        97"
+              "                                         movie_title   avg_rat  w_num\n",
+              "0                   Shawshank Redemption, The (1994)  4.442922    219\n",
+              "1                              Godfather, The (1972)  4.290850    153\n",
+              "2                              Cool Hand Luke (1967)  4.290698     43\n",
+              "3                                   Chinatown (1974)  4.255102     49\n",
+              "4                                 Rear Window (1954)  4.253623     69\n",
+              "5                         Princess Bride, The (1987)  4.247863    117\n",
+              "6                            Schindler's List (1993)  4.246835    158\n",
+              "7                                  Goodfellas (1990)  4.245192    104\n",
+              "8  Dr. Strangelove or: How I Learned to Stop Worr...  4.243902     82\n",
+              "9                          American History X (1998)  4.237113     97"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e5ff45fa-d345-4e73-9bc9-bfdeead7d9fa\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-86e38386-c1cd-4c0b-9ed8-cea3a80d79b8\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -10160,7 +10159,7 @@
               "      <th></th>\n",
               "      <th>movie_title</th>\n",
               "      <th>avg_rat</th>\n",
-              "      <th>read_num</th>\n",
+              "      <th>w_num</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -10230,7 +10229,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e5ff45fa-d345-4e73-9bc9-bfdeead7d9fa')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-86e38386-c1cd-4c0b-9ed8-cea3a80d79b8')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -10282,12 +10281,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-e5ff45fa-d345-4e73-9bc9-bfdeead7d9fa button.colab-df-convert');\n",
+              "        document.querySelector('#df-86e38386-c1cd-4c0b-9ed8-cea3a80d79b8 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-e5ff45fa-d345-4e73-9bc9-bfdeead7d9fa');\n",
+              "        const element = document.querySelector('#df-86e38386-c1cd-4c0b-9ed8-cea3a80d79b8');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -10307,8 +10306,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-b1ab7b07-1c88-4b9a-8e2d-24ade71eba3e\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b1ab7b07-1c88-4b9a-8e2d-24ade71eba3e')\"\n",
+              "<div id=\"df-fa56b62c-64b8-4f40-89ad-0281fbca23d5\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-fa56b62c-64b8-4f40-89ad-0281fbca23d5')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -10427,7 +10426,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-b1ab7b07-1c88-4b9a-8e2d-24ade71eba3e button');\n",
+              "        document.querySelector('#df-fa56b62c-64b8-4f40-89ad-0281fbca23d5 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -10438,11 +10437,11 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "summary": "{\n  \"name\": \"\\\"\\\"\\\", conn)\",\n  \"rows\": 10,\n  \"fields\": [\n    {\n      \"column\": \"movie_title\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 10,\n        \"samples\": [\n          \"Dr. Strangelove or: How I Learned to Stop Worrying and Love the Bomb (1964)\",\n          \"Godfather, The (1972)\",\n          \"Princess Bride, The (1987)\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"avg_rat\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.061794789468858816,\n        \"min\": 4.237113402061856,\n        \"max\": 4.442922374429224,\n        \"num_unique_values\": 10,\n        \"samples\": [\n          4.2439024390243905,\n          4.290849673202614,\n          4.247863247863248\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"read_num\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 54,\n        \"min\": 43,\n        \"max\": 219,\n        \"num_unique_values\": 10,\n        \"samples\": [\n          82,\n          153,\n          117\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"\\\"\\\"\\\", conn)\",\n  \"rows\": 10,\n  \"fields\": [\n    {\n      \"column\": \"movie_title\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 10,\n        \"samples\": [\n          \"Dr. Strangelove or: How I Learned to Stop Worrying and Love the Bomb (1964)\",\n          \"Godfather, The (1972)\",\n          \"Princess Bride, The (1987)\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"avg_rat\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.061794789468858816,\n        \"min\": 4.237113402061856,\n        \"max\": 4.442922374429224,\n        \"num_unique_values\": 10,\n        \"samples\": [\n          4.2439024390243905,\n          4.290849673202614,\n          4.247863247863248\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"w_num\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 54,\n        \"min\": 43,\n        \"max\": 219,\n        \"num_unique_values\": 10,\n        \"samples\": [\n          82,\n          153,\n          117\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 29
         }
       ]
     },
@@ -10481,7 +10480,7 @@
         "id": "J2PgNxIT8JyH",
         "outputId": "0f19f6b9-e991-4fb0-b6b5-b2992f58ee1a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10543,7 +10542,7 @@
         "id": "iP57vb9zGX0w",
         "outputId": "31eb4f20-fdfd-45e1-ed17-79d1efd85abb"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10609,7 +10608,7 @@
         "id": "tcPfj788LMoF",
         "outputId": "3da34d80-fc7b-4e89-f770-d1c6dbf4c5bd"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10681,7 +10680,7 @@
         "id": "zhWMUhENJxRj",
         "outputId": "16c2d58d-3316-4e29-803d-b38b05fd5054"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10728,7 +10727,7 @@
       "metadata": {
         "id": "TEoS00Pj6hoj"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10747,7 +10746,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10772,7 +10771,7 @@
       "metadata": {
         "id": "0nIIk0RBKgJ1"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10801,7 +10800,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10828,7 +10827,7 @@
           "height": 291
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11317,7 +11316,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11365,7 +11364,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11421,7 +11420,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11471,7 +11470,7 @@
       "metadata": {
         "id": "y41R8-ybLi1Z"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11483,7 +11482,7 @@
       "metadata": {
         "id": "RV7xQS5EN8oC"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11498,7 +11497,7 @@
       "metadata": {
         "id": "_afuNGB6OEli"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11516,7 +11515,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11571,7 +11570,7 @@
           ]
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
