ajuste de texto

--- a/c_modelos1.ipynb
+++ b/c_modelos1.ipynb
@@ -10462,10 +10462,10 @@
         "query = \"\"\"\n",
         "SELECT movie_title,\n",
         "       AVG(CASE WHEN rating = 0 THEN NULL ELSE rating END) AS avg_rat,\n",
-        "       COUNT(*) AS read_w\n",
+        "       COUNT(*) AS w_num\n",
         "FROM full_ratings\n",
         "GROUP BY movie_title\n",
-        "ORDER BY read_w DESC\n",
+        "ORDER BY w_num DESC\n",
         "\"\"\"\n",
         "\n",
         "result = pd.read_sql(query, conn)\n",
@@ -10478,25 +10478,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J2PgNxIT8JyH",
-        "outputId": "a79c42a3-e8e6-49ef-8c44-fb13a7e6c461"
+        "outputId": "269495b6-06e7-4785-b1a4-9313e2dd4c80"
       },
-      "execution_count": 30,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "                                         movie_title   avg_rat  read_w\n",
-            "0                                Forrest Gump (1994)  4.127530     247\n",
-            "1                                Pulp Fiction (1994)  4.189956     229\n",
-            "2                   Shawshank Redemption, The (1994)  4.442922     219\n",
-            "3                                 Matrix, The (1999)  4.123256     215\n",
-            "4                   Silence of the Lambs, The (1991)  4.152913     206\n",
-            "5          Star Wars: Episode IV - A New Hope (1977)  4.178571     196\n",
-            "6                               Jurassic Park (1993)  3.781081     185\n",
-            "7  Star Wars: Episode V - The Empire Strikes Back...  4.183140     172\n",
-            "8                                  Fight Club (1999)  4.225146     171\n",
-            "9                  Terminator 2: Judgment Day (1991)  3.991176     170\n"
+            "                                         movie_title   avg_rat  w_num\n",
+            "0                                Forrest Gump (1994)  4.127530    247\n",
+            "1                                Pulp Fiction (1994)  4.189956    229\n",
+            "2                   Shawshank Redemption, The (1994)  4.442922    219\n",
+            "3                                 Matrix, The (1999)  4.123256    215\n",
+            "4                   Silence of the Lambs, The (1991)  4.152913    206\n",
+            "5          Star Wars: Episode IV - A New Hope (1977)  4.178571    196\n",
+            "6                               Jurassic Park (1993)  3.781081    185\n",
+            "7  Star Wars: Episode V - The Empire Strikes Back...  4.183140    172\n",
+            "8                                  Fight Club (1999)  4.225146    171\n",
+            "9                  Terminator 2: Judgment Day (1991)  3.991176    170\n"
           ]
         }
       ]
